<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/menu_home"
            android:checkable="true"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/wardrobe"
            android:title="@string/wardrobe"
            android:checkable="true"
            android:icon="@drawable/wardrobe"/>
        <item
            android:id="@+id/menu_outfit"
            android:checkable="true"
            android:icon="@drawable/clothes"
            android:title="@string/outfit"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:checkable="true"
            android:icon="@drawable/settings"/>
</menu>