<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.Settings">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_margin="25dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/useMetric"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Switch
            android:id="@+id/metricSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:checked="true"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="5dp"
            android:text="@string/useMetricExp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="40dp"
            android:text="@string/min_temp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="5dp"
            android:text="@string/min_temp_summary" android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <EditText
            android:id="@+id/minTemp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" android:autofillHints="@string/min_temp_summary"
            android:ems="10" android:hint="@string/minTempValue"
            android:inputType="numberSigned" android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="40dp"
            android:text="@string/rate" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="5dp"
            android:text="@string/RateExp" android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate"/>
        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="40dp"
            android:text="@string/more_from_me"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="5dp"
            android:text="@string/moreExp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more"/>
        <TextView
            android:id="@+id/ill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" android:text="@string/credits"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" android:text="@string/creditsExp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ill"/>
        <TextView
            android:id="@+id/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" android:text="@string/CreditsIcons"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" android:text="@string/creditsIconsExp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icons"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>