<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".onboardingPackage.PermissionsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="75dp"
            android:contentDescription="@string/NeedsPermissions" android:src="@drawable/preferences"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp" android:gravity="center"
            android:text="@string/NeedPermissionCamera" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"/>
        <Button
            android:id="@+id/buttonGrantCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" android:backgroundTint="@color/mauve"
            android:text="@string/GrantCamera" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/NeedPermissionLocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGrantCamera"/>
        <Button
            android:id="@+id/buttonGrantLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="10dp"
            android:backgroundTint="@color/mauve"
            android:text="@string/GrantLocation"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginStart="36dp"
            android:text="@string/page_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="@+id/proceed" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/proceed"/>
        <Button
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="?attr/colorAccent"
            android:text="@string/StartButton" android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>