<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   android:layout_gravity="center"
                                                   android:background="?attr/colorSurface" tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_article_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/dialogEdit_Image"
            android:layout_width="173dp"
            android:layout_height="173dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/article_image"
            tools:srcCompat="@drawable/add"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill_horizontal"
                    android:text="@string/article_type"
                    android:textColor="?attr/colorAccent"
                    android:textSize="17sp"/>

                <Spinner
                    android:id="@+id/dialogEdit_Type_Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="?attr/colorAccent" android:entries="@array/article_types"
                    android:popupBackground="@color/pinkDark"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill_horizontal"
                    android:text="@string/article_warmth"
                    android:textColor="?attr/colorAccent"
                    android:textSize="17sp"/>

                <Spinner
                    android:id="@+id/dialogEdit_Warmth_Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="?attr/colorAccent" android:entries="@array/article_warmths"
                    android:popupBackground="@color/pinkDark"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogEdit_Cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mauveDark" android:text="@string/cancel"
                android:textColor="?attr/colorOnPrimary"/>

            <Button
                android:id="@+id/dialogEdit_Save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mauveLight" android:text="@string/save"
                android:textColor="?attr/colorOnPrimary"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>